; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/qcom/extr_rpmhpd.c_rpmhpd_power_on.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/qcom/extr_rpmhpd.c_rpmhpd_power_on.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.generic_pm_domain = type { i32 }
%struct.rpmhpd = type { i32, i64 }

@rpmhpd_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.generic_pm_domain*)* @rpmhpd_power_on to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rpmhpd_power_on(%struct.generic_pm_domain* %0) #0 {
  %2 = alloca %struct.generic_pm_domain*, align 8
  %3 = alloca %struct.rpmhpd*, align 8
  %4 = alloca i32, align 4
  store %struct.generic_pm_domain* %0, %struct.generic_pm_domain** %2, align 8
  %5 = load %struct.generic_pm_domain*, %struct.generic_pm_domain** %2, align 8
  %6 = call %struct.rpmhpd* @domain_to_rpmhpd(%struct.generic_pm_domain* %5)
  store %struct.rpmhpd* %6, %struct.rpmhpd** %3, align 8
  store i32 0, i32* %4, align 4
  %7 = call i32 @mutex_lock(i32* @rpmhpd_lock)
  %8 = load %struct.rpmhpd*, %struct.rpmhpd** %3, align 8
  %9 = getelementptr inbounds %struct.rpmhpd, %struct.rpmhpd* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %1
  %13 = load %struct.rpmhpd*, %struct.rpmhpd** %3, align 8
  %14 = load %struct.rpmhpd*, %struct.rpmhpd** %3, align 8
  %15 = getelementptr inbounds %struct.rpmhpd, %struct.rpmhpd* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = call i32 @rpmhpd_aggregate_corner(%struct.rpmhpd* %13, i64 %16)
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %12, %1
  %19 = load i32, i32* %4, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %18
  %22 = load %struct.rpmhpd*, %struct.rpmhpd** %3, align 8
  %23 = getelementptr inbounds %struct.rpmhpd, %struct.rpmhpd* %22, i32 0, i32 0
  store i32 1, i32* %23, align 8
  br label %24

24:                                               ; preds = %21, %18
  %25 = call i32 @mutex_unlock(i32* @rpmhpd_lock)
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local %struct.rpmhpd* @domain_to_rpmhpd(%struct.generic_pm_domain*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @rpmhpd_aggregate_corner(%struct.rpmhpd*, i64) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
